# algorithm-visualizer-tauri

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/windows/: hooks.nsh
src-tauri/windows/fragments/: custom_wix_ui.wxs  desktop_shortcut.wxs  registry.wxs  shortcuts.wxs  uninstall_options.wxs
src-tauri/windows/locales/: zh-CN.wxl
src-tauri/windows/wix/: main.wxs
src-tauri/wix/customui/: shortcutdlg.wxs  wixui_custom.wxs
src-tauri/wix/locales/: zh-CN.wxl
src/components/: CodeViewer.vue  CustomTitleBar.vue  FileTree.vue  TauriTest.vue
src/router/: index.js
src/scripts/chapters/chapter_array_and_linkedlist/: linked_list.js
src/scripts/chapters/chapter_computational_complexity/: space_complexity.js
src/scripts/chapters/chapter_graph/: graph_adjacency_list.js  graph_bfs.js  graph_dfs.js
src/scripts/chapters/chapter_heap/: my_heap.js
src/scripts/chapters/chapter_searching/: hashing_search.js  linear_search.js
src/scripts/chapters/chapter_stack_and_queue/: linkedlist_queue.js  linkedlist_stack.js
src/scripts/chapters/chapter_tree/: avl_tree.js  binary_search_tree.js  binary_tree.js  binary_tree_bfs.js  binary_tree_dfs.js
src/scripts/chapters/modules/: ListNode.js  PrintUtil.js  TreeNode.js  Vertex.js
src/styles/: custom-titlebar.css
src/utils/: tauri.js  tauriCompatLayer.js  windowIcons.js
src/views/: HomePage.vue
