[package]
name = "algorithm_visualizer"
version = "0.1.0"
description = "算法可视化器 - 一个直观展示算法运行过程的工具"
authors = ["Algorithm Visualizer Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["devtools", "image-png", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2.0.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
